--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "axios": "^0.24.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.6",
